###
# This is a log of major user-visible changes in each MacPorts release.
# $Id$
###


Unreleased:
    - New fetch.type git (#14232, eridius in r34875)

    - fixed "port mdmg" getting block size wrong for the disk image (#13968, afb in r34844)

    - port lint now checks all dependencies so that the ports actually exist (#14380)

    - added target_state to avoid the need for privileges for lint/livecheck (#13458)

    - Overhauled output for port info/deps/dependents/search (raimue in
	r34354, r34371, r34391, r34395, r34402, r34420)

    - Revert the default +universal MDT/SDK to 10.4/10.4u on Tiger and 10.5/10.5 on Leopard

    - port lint shouldn't require variable master_sites for fetch.type != standard (#14377)

    - Add --pretend and --nosync flags to selfupdate (raimue in r33938, r33939,
	r33940, 33941)

    - Work around autoconf X11 detection bugs on darwin (afb in r33717)

    - Fix bugs with X11 lib detection on Leopard (#14089, afb in r33716)

    - Add configure.{optflags,m32,m64,march,mtune} (afb in r33503, r33599)

    - Add applications_dir and frameworks_dir configuration (r33499, r33722)

    - Remove some hardcoded paths (such as /usr/X11R6, /usr/bin/install)

    - Add configure.{universal_target,universal_sysroot,universal_archs} (afb in r33478).

    - Change default +universal platform back to: 10.4/10.4u.sdk/i386 ppc (r33087, r33107).

    - Add `port platform` info target that outputs current platform (#12302, afb in r32724).

    - Enable 64 bit environment, ppc64 x86_64, for all +universal builds (mww in r32194).

    - Add 'merge' function for merging multiple (single arch) destroots into one (universal)
      destroot (mww in r31954).


Release 1.6.1 (unreleased):

    - If checksum is mismatched, and in verbose mode, present a corrected pre-fabricated checksum statement
      to make it easy to update a port (jberry in r32441).

    - Fixed the "Error: Unable to open port: invalid command name "ui_prefix"" runtime error on Panther