@@ -289,10 +289,14 @@ Deactivate and uninstall
 .Ar portname .
 To uninstall all installed but inactive ports, use
 .Fl u .
+To recursively uninstall all dependents of this port, use
+.Fl -recursive .
+.Pp
 For example:
 .Pp
 .Dl "port uninstall vim"
 .Dl "port -u uninstall"
+.Dl "port uninstall --recursive python24"
 .Ss activate
 Activate the installed
 .Ar portname .
